BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Product_Strategy_vod__c.object
<CustomObject>
    <description>This object stores all product strategies for a product plan</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this strategy is active.   Only Product Strategies with this field checked will be visible when clicking on the &quot;Apply Product Plan&quot; button.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the strategy</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Est_Market_Share_Increase__c</fullName>
        <description>Estimated increase in market share this strategy is believed to generate if executed properly</description>
        <label>Est. Shr Incr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for use in data loading and migration.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the product plan</description>
        <label>Product Plan</label>
        <referenceTo>Product_Plan_vod__c</referenceTo>
        <relationshipLabel>Product Strategies</relationshipLabel>
        <relationshipName>Product_Strategy_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Engagement_Plan_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field to define which engagement plan the record is related to.</description>
        <label>Stakeholder Engagement Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Immunoscience-Oncology Engagement Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis C Engagement Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_type_vod__c</fullName>
        <description>Picklist of strategy types.</description>
        <label>Strategy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Extend Days on Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promote Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promote Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promote New Indication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Tier Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Coverage Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Product Switches</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Strategy</label>
    <nameField>
        <label>Product Strategy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Strategies</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Stakeholder_Engagement_Plan</fullName>
        <active>true</active>
        <description>Record type for EMEA Stake Holder Engagement plan strategies</description>
        <label>BMS - EMEA - Stakeholder Engagement Plan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>